Attempting to fix issue where links are blue on mobile Safari

--- a/css/project_section_style.css
+++ b/css/project_section_style.css
@@ -25,11 +25,13 @@
 
 .projects-display a {
     text-decoration: none;
+    -webkit-text-decoration: none;
 }
 
 .projects-display a:visited {
     color: white;
     text-decoration: none;
+    -webkit-text-decoration: none;
 }
 
 .projects-display .gallery img {
